--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -164,6 +164,7 @@ body {
 .service_section {
     background: #F7F7F7;
     color: #0C0C0C;
+    padding: 40px 0;
 }
 
 .service_section h2 {
@@ -172,18 +173,23 @@ body {
     font-variant: small-caps;
     font-weight: 500;
     font-size: 45px;
-    line-height: 100%;
+    line-height: 100%;    
+    margin-bottom: 60px;
 
+}
+.info_box_collection{
+    padding: 30px 0;
 }
 
 .service_section .info_box {
-    max-width: 20%;
+    width: 23%;
     background: red;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
-        rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: relative;
-    height: 20vh;
-    padding-top: 50PX;
+    padding-top: 80px;
+    margin-right: 17px;
+    padding: 80px 0 5px 15px;
 }
 
 .service_section .info_box .img {
@@ -196,24 +202,48 @@ body {
     text-align: center;
     line-height: 75px;
     border-radius: 100%;
+    border: 1px solid #D9D9D9;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+        rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+        rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    background: #F6F6F6;
+
 
 }
 
-.service_section .info_box .img img {
-    
-}
+.service_section .info_box .img img {}
 
 .service_section .info_box::before {
     position: absolute;
-    content: "dgfd";
+    content: "";
     height: 100px;
     width: 100px;
     border-radius: 100%;
-    background: rgb(64, 51, 255);
+    background: transparent;
     top: -50px;
     left: 50%;
     transform: translateX(-50%);
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
-        rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
-        rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+        rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.service_section .info_box h3 {
+    font-family: 'Intro Regular';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 11px;
+    color: #696868;
+}
+
+.service_section .info_box ul li {
+    font-family: 'Intro Light';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 11px;
+    color: #7A7A7A;
+    margin-top: 12px;
+    text-transform: capitalize;
+
 }
