--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -10,29 +10,34 @@ img {
 
 .container {
     max-width: 89%;
+    padding: 0;
 }
+
+.container .container {
+    max-width: 75%;
+    padding: 0;
+}
+
 
 body {
     font-family: 'Trajan Pro';
     background-color: black;
 }
 
-#home {
+#home,
+#about,
+#service,
+#contact,
+#project {
     color: white;
     background: url("./../images/home-page-bg.png");
     background-position: top center;
     background-repeat: no-repeat;
     background-size: contain;
-    /* background: red; */
-
 }
 
 #header .col-md-6 {
     width: auto;
-}
-
-.container .container {
-    max-width: 75%;
 }
 
 .navbar-nav .nav-item {
@@ -250,17 +255,17 @@ body {
     text-transform: capitalize;
 }
 
-#home+.row {
-    margin: 0 -13px;
-    background-color: black;
+.content_wrapper {
+    /* margin: 0 -13px; */
+    background-color: rgb(241, 51, 51);
 }
 
-#home+.row .container {
+.content_wrapper .container {
     position: relative;
 
 }
 
-#home+.row h2 {
+.content_wrapper h2 {
     position: absolute;
     top: -295px;
     left: 0px;
@@ -270,16 +275,18 @@ body {
     color: #747474;
 }
 
-#home+.row h2 span {
+.content_wrapper h2 span {
     display: block;
 }
 
-#home~div.row:nth-child(3) {
+.client_carousel_section {
     padding: 65px 0;
     padding-bottom: 30px;
+    background: #ffffff;
 }
 
-.row:nth-child(3) h2 {
+.client_carousel_section h2,
+.Testimonials h2 {
     color: #0C0C0C;
     font-variant: small-caps;
     text-align: center;
@@ -312,4 +319,250 @@ body {
 .owl-carousel .owl-dots.disabled,
 .owl-carousel .owl-nav.disabled {
     display: block;
+}
+
+.Testimonials {
+    background: #F6F6F6;
+    padding: 50px 50px 0px 50px;
+}
+
+.Testimonials .item {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    text-align: center;
+    border: 4px solid rgba(102, 102, 102, 0.2);
+    position: relative;
+    outline: 8px solid rgba(102, 102, 102, 0.2);
+    outline-offset: 5px;
+    padding: 20px 10px 10px 10px;
+    position: relative;
+    margin: 0px -15px;
+}
+
+.testimonials_wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around !important;
+    padding: 50px 0;
+}
+
+
+.Testimonials .item::before {
+    content: "";
+    position: absolute;
+    top: -35px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #F6F6F6 url(./../images/before.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 65px;
+    height: 40px;
+}
+
+.Testimonials .item::after {
+    content: "";
+    position: absolute;
+    bottom: -45px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #F6F6F6 url("./../images/after.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 65px;
+    height: 65px;
+
+}
+
+.Testimonials .item .img img {
+    width: 60px;
+}
+
+.Testimonials .item .content {
+    margin-top: 10px;
+    font-family: 'Intro Light';
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 14px;
+    color: #6B6B6B;
+
+}
+
+.testimonials_wrapper .owl-stage {
+    width: 100% !important;
+    padding-left: 200px !important;
+    padding-right: 450px !important;
+    padding: 40px 0;
+}
+
+.owl-carousel .owl-item img {
+    display: inline;
+}
+
+.team {
+    background-color: white;
+    padding: 70px 0;
+}
+
+.team h2 {
+    color: #0C0C0C;
+    font-variant: small-caps;
+    text-align: center;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 15px;
+}
+
+.team p {
+    text-align: center;
+    color: #6B6B6B;
+    font-size: 18px;
+}
+
+.team .team_members {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 35px 0;
+}
+
+.team .team_members .member {
+    text-align: center;
+    margin: 0 10px;
+}
+
+.team .team_members .member .img {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.team .team_members .member .img img {}
+
+.team .team_members .member .text h3 {
+    font-family: 'inter';
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 5px;
+    color: #696868;
+
+}
+
+.team .team_members .member .text span {
+    display: block;
+    text-align: center;
+    line-height: 19px;
+    color: #696868;
+}
+.team .team_members .member .text .icon{
+    text-align: center;
+}
+.team .team_members .member .text .icon i{
+    margin-right: 5px;
+}
+.footer_section {
+    color: #FFFFFF;
+    padding: 30px 0;
+    background-color: #0D0D0D;
+}
+
+.footer_section h2 {
+    font-size: 20px;
+    text-transform: capitalize;
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+
+.footer_section h3 {
+    font-size: 18px;
+    text-transform: capitalize;
+    font-weight: 400;
+    line-height: 10px;
+    font-size: 16px;
+
+}
+
+.footer_section .info p {
+    text-transform: capitalize;
+    font-weight: lighter;
+    color: #696868;
+    line-height: 1.2;
+    font-family: 'Intro Regular';
+    font-size: 14px;
+
+}
+
+.footer_section .info p span {
+    display: block;
+}
+
+.footer_section .info:nth-child(4) p {
+    text-transform: lowercase;
+}
+
+.footer_section .info:nth-child(5) span {
+    display: inline-block;
+    border: 1px solid #464646;
+    border-radius: 100%;
+    text-align: center;
+    padding: 0px 9px;
+}
+
+.footer_section .info span i {
+    text-align: center;
+    font-size: 12px;
+    line-height: 29px;
+}
+
+.footer_section .copy_right_section::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    left: 0;
+    top: 0;
+    background-color: #6B6B6B;
+}
+
+.footer_section .copy_right_section {
+    margin-top: 20px;
+    padding-top: 20px;
+    text-align: center;
+    color: #6B6B6B;
+    text-transform: capitalize;
+    position: relative;
+}
+
+
+
+/* About page  */
+.about {
+    background-color: #F6F6F6;
+    padding: 30px 0 !important;
+
+}
+
+.about h2 {
+    font-size: 35px;
+    color: #0C0C0C;
+    text-align: center;
+    margin-bottom: 30px;
+    font-variant: small-caps;
+}
+
+.about .text_box p {
+    color: #696868;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.banner {
+    background-color: #F6F6F6;
+    padding: 30px 0;
+}
+
+.banner img {
+    width: 860px;
 }
