--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -188,7 +188,7 @@ body {
 }
 
 .service_section .info_box {
-    width: 23%;
+    max-width: 23%;
     background: red;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -256,8 +256,8 @@ body {
 }
 
 .content_wrapper {
-    /* margin: 0 -13px; */
-    background-color: rgb(241, 51, 51);
+    padding: 0;
+    margin: 0;
 }
 
 .content_wrapper .container {
@@ -299,6 +299,14 @@ body {
     width: 70px;
 }
 
+.client_carousel_section .owl-nav.disabled+.owl-dots,
+.testimonials_wrapper .owl-nav.disabled+.owl-dots,
+.client_carousel_section .owl-dots.disabled, .owl-carousel .owl-nav.disabled {
+    display: block;
+}
+.testimonials_wrapper .owl-nav{
+    display: none !important;
+}
 .testimonials_wrapper .owl-carousel {
     display: flex;
     align-items: center !important;
@@ -320,9 +328,8 @@ body {
     justify-content: center !important;
 }
 
-.testimonials_wrapper .owl-carousel .owl-dots.disabled,
-.testimonials_wrapper .owl-carousel .owl-nav.disabled {
-    display: block;
+.testimonials_wrapper .owl-carousel .owl-dots.disabled {
+    display: block !important;
 }
 
 .Testimonials {
@@ -425,17 +432,20 @@ body {
     color: #6B6B6B;
     font-size: 18px;
 }
-
+.team h2{
+    line-height: 25px;
+}
 .team .team_members {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 35px 0;
+    flex-wrap: wrap;
 }
 
 .team .team_members .member {
     text-align: center;
-    margin: 0 10px;
+    margin:10px;
 }
 
 .team .team_members .member .img {
@@ -665,7 +675,7 @@ body {
 /* contact */
 .contact {
     background-color: #FFFFFF;
-    padding: 30px 0;
+    padding: 35px 0;
 }
 
 .contact .title h2 {
@@ -687,7 +697,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 70px 0;
+    padding: 50px 0;
 }
 
 .details_wrap .box {
@@ -837,13 +847,13 @@ body {
 /* marketing && digital-campaign background  */
 .slider_wrap {
     background-image: url("./../images/center-bg.png");
-    background-position: top;
+    background-position: top right;
     background-repeat: no-repeat;
     background-size: contain;
 }
 
 /* brands  */
-.brands{
+.brands {
     background-image: url("./../images/bg-bottom.png");
     background-repeat: no-repeat;
     background-position: bottom right;
