--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,101 @@
+@font-face {
+    font-family: 'IntroLight';
+    src: url('../../fonts/IntroLight.eot');
+    src: url('../../fonts/IntroLight.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/IntroLight.woff2') format('woff2'),
+        url('../../fonts/IntroLight.woff') format('woff'),
+        url('../../fonts/IntroLight.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'IntroRegular';
+    src: url('../../fonts/IntroRegular.eot');
+    src: url('../../fonts/IntroRegular.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/IntroRegular.woff2') format('woff2'),
+        url('../../fonts/IntroRegular.woff') format('woff'),
+        url('../../fonts/IntroRegular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Intro';
+    src: url('../../fonts/Intro-Bold.eot');
+    src: url('../../fonts/Intro-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Intro-Bold.woff2') format('woff2'),
+        url('../../fonts/Intro-Bold.woff') format('woff'),
+        url('../../fonts/Intro-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'IntroRegular';
+    src: url('../../fonts/IntroRegular_1.eot');
+    src: url('../../fonts/IntroRegular_1.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/IntroRegular_1.woff2') format('woff2'),
+        url('../../fonts/IntroRegular_1.woff') format('woff'),
+        url('../../fonts/IntroRegular_1.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'IntroLight';
+    src: url('../../fonts/IntroLight_1.eot');
+    src: url('../../fonts/IntroLight_1.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/IntroLight_1.woff2') format('woff2'),
+        url('../../fonts/IntroLight_1.woff') format('woff'),
+        url('../../fonts/IntroLight_1.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Intro';
+    src: url('../../fonts/Intro-Bold_1.eot');
+    src: url('../../fonts/Intro-Bold_1.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Intro-Bold_1.woff2') format('woff2'),
+        url('../../fonts/Intro-Bold_1.woff') format('woff'),
+        url('../../fonts/Intro-Bold_1.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Trajan Pro';
+    src: url('../../fonts/TrajanPro-Bold.eot');
+    src: url('../../fonts/TrajanPro-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/TrajanPro-Bold.woff2') format('woff2'),
+        url('../../fonts/TrajanPro-Bold.woff') format('woff'),
+        url('../../fonts/TrajanPro-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Trajan Pro';
+    src: url('../../fonts/TrajanPro-Regular.eot');
+    src: url('../../fonts/TrajanPro-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/TrajanPro-Regular.woff2') format('woff2'),
+        url('../../fonts/TrajanPro-Regular.woff') format('woff'),
+        url('../../fonts/TrajanPro-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
 * {
     padding: 0;
     margin: 0;
@@ -46,7 +144,7 @@ body {
 
 .navbar-nav .nav-item .nav-link {
     color: #9D9D9D;
-    font-family: 'Intro Regular';
+    font-family: 'IntroRegular';
     font-size: 18px;
     text-transform: capitalize;
     padding: 0;
@@ -108,7 +206,7 @@ body {
 }
 
 .img_section .content_wrap p {
-    font-family: 'Intro Bold';
+    font-family: 'Intro';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
@@ -139,7 +237,7 @@ body {
 .img_section .content_wrap p>span {
     display: block;
     font-weight: 300;
-    font-family: 'Intro regular';
+    font-family: 'IntroRegular';
     font-size: 12px;
 }
 
@@ -156,7 +254,7 @@ body {
 }
 
 .story_section p {
-    font-family: 'Intro Light';
+    font-family: 'IntroLight';
     font-style: normal;
     font-weight: 200;
     font-size: 12px;
@@ -234,7 +332,7 @@ body {
 }
 
 .service_section .info_box h3 {
-    font-family: 'Intro Regular';
+    font-family: 'IntroRegular';
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -245,7 +343,7 @@ body {
 }
 
 .service_section .info_box ul li {
-    font-family: 'Intro Light';
+    font-family: 'IntroLight';
     font-style: normal;
     font-weight: 300;
     font-size: 14px;
@@ -394,7 +492,7 @@ body {
 
 .Testimonials .item .content {
     margin-top: 10px;
-    font-family: 'Intro Light';
+    font-family: 'IntroLight';
     font-weight: 300;
     font-size: 12px;
     line-height: 14px;
@@ -506,7 +604,7 @@ body {
     font-weight: lighter;
     color: #696868;
     line-height: 1.2;
-    font-family: 'Intro Regular';
+    font-family: 'IntroRegular';
     font-size: 14px;
 
 }
@@ -627,7 +725,7 @@ body {
     color: #000000;
     font-weight: 300;
     line-height: 20px;
-    font-family: 'Intro Light';
+    font-family: 'IntroLight';
     opacity: 0.6;
     padding-right: 70px;
 }
@@ -656,7 +754,7 @@ body {
 }
 
 .screens_wrapper .screen {
-    width: 30%;
+    max-width: 30%;
     margin: 10px 5px;
     display: inline-block;
 }
@@ -701,7 +799,7 @@ body {
 }
 
 .details_wrap .box {
-    width: 20%;
+    min-width: 25%;
     background: #F0F0F0;
     margin: 0 5px;
 }
@@ -727,7 +825,7 @@ body {
     font-weight: 700;
     line-height: 10px;
     color: #000000;
-    font-family: 'Intro Bold';
+    font-family: 'Intro';
     text-transform: capitalize;
 }
 
