--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -122,7 +122,9 @@ img {
     max-width: 100%;
 }
 
-
+.overflow-x-hidden{
+    overflow: hidden;
+}
 
 /* .container .container {
     max-width: 75%;
